--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <title>github pages</title>
 </head>
 <body>
-  <h1>Hello github!</h1>
+  <h1>Hello github! My name is welltan</h1>
 </body>
 </html>
