--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>github pages</title>
+  <title>welltan的github pages</title>
 </head>
 <body>
-  <h1>Hello github! My name is welltan</h1>
+  <h1>Hello world!</h1>
 </body>
 </html>
